# morse-haskell

./: morse-code.cabal
app/: Main.hs
src/: Morse.hs
test/: Spec.hs
